<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.finalhcproject.MainActivity">


    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:background="#303030">

    </FrameLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/mainTabLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:background="@color/tabColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:tabGravity="fill"
        app:tabMaxWidth="0dp"
        app:tabMode="fixed">

        <android.support.design.widget.TabItem
            android:id="@+id/tabGroups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/groups" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabLights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lights" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabBridges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bridges" />
    </android.support.design.widget.TabLayout>
</RelativeLayout>
